# udp-tcp-communicate

./: .gitmodules  CMakeLists.txt  README.md
cmake/: expand_ability.cmake  install.cmake  platform.cmake  third_depend.cmake  thirddepend.cmake
src/_external_api/: communicate_api.cpp  communicate_api.h  communicate_define.h
src/api/: communicate_api.cpp  communicate_api.h
src/common/: config_wrapper.cpp  config_wrapper.h  serialize_wrapper.cpp  serialize_wrapper.h  socket_wrapper.cpp  socket_wrapper.h
src/core/common/: config_wrapper.cpp  config_wrapper.h  logger_wrapper.cpp  logger_wrapper.h  socket_wrapper.cpp  socket_wrapper.h
src/core/config/: config_interface.h  yaml_cfg.cpp  yaml_cfg.h
src/core/config/yaml/: yaml_cfg.cpp  yaml_cfg.h
src/core/protocol/: communicate_interface.h
src/core/protocol/tcp/: tcp_communication.h  tcp_core.cpp  tcp_core.h
src/core/protocol/udp/: udp_communicate.cpp  udp_communicate.h  udp_core.cpp  udp_core.h  udp_enhanced.cpp  udp_enhanced.h  udp_manager.cpp  udp_manager.h
src/core/utils/: singleton.h  threadpool_wrapper.h  utils_ways.h  yaml.hpp
src/expand/logger/: logger_define.h
src/expand/logger/impl/: logger_fprintf.h  logger_spdlog.h
src/expand/threadpool/: threadpool_wrapper.h
src/expand/threadpool/windows/: threadpool_win.cc  threadpool_win.h
src/impl/: struct_impl.h
src/impl/common/: serialize_wrapper.h
src/impl/utils/: check_methods.h
src/utils/: check_methods.h
test/api_test/: CMakeLists.txt  main.cpp  test.yaml
